# OOP_PR12_Shapes

./: CMakeLists.txt  README.md  main.cpp
includes/: Canvas.h  Circle.h  Point.h  Rectangle.h  Shape2D.h
src/: Canvas.cpp  Circle.cpp  Point.cpp  Rectangle.cpp  Shape2D.cpp
